# industrial-defect-detection

./: .gitignore  Dockerfile  README.md  pyproject.toml
deployment/: DockerFile  pyproject.toml
deployment/app/: main.py  model.py
k8s/: deployment.yaml  service.yaml
notebooks/: 00_eda.ipynb  01_cnn_experiments.ipynb  02_vit_experiments.ipynb  CNN.ipynb  ViT.ipynb
src/: split_dataset.py
src/data_operations/: dataset.py  split_dataset.py  transforms.py
src/interpretability/: attention_viz.py  gradcam.py
src/models/cnn/: resnet.py  train.py
src/models/transformer/: vit.py
src/training/: train.py
src/utils/: seed.py
