[project]
name = "industrial-defect-detection"
version = "0.1.0"
description = "Industrial surface defect classification using CNNs and Vision Transformers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "Pillow>=11.0.0",
    "huggingface-hub>=1.7.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
    "kaggle>=2.0.0",
]
deploy = [
    "fastapi>=0.135.0",
    "uvicorn>=0.41.0",
    "pydantic>=2.12.0",
    "python-multipart>=0.0.22",
]