[project]
name = "neu-det-api"
version = "1.0.0"
description = "NEU-DET defect detection API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn>=0.41.0",
    "pydantic>=2.12.0",
    "python-multipart>=0.0.22",
    "Pillow>=11.0.0",
    "huggingface-hub>=1.7.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "matplotlib>=3.10.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" }
]
torchvision = [
    { index = "pytorch-cpu" }
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true